# creditcoin-substrate

./: .gitattributes  .gitignore  404.html  Cargo.toml  Dockerfile  README.md  architecture.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: bench.yml  ci.yml  deploy-docs.yml  docker-release.yml  llvm-cov.yml  release.yml  runtime-extrinsics.yml  runtime.yml
architecture/: client.html
architecture/runtime/: pallet-creditcoin.html  pallet-difficulty.html  runtime.html
chainspecs/: fastTestTempnetSpec.json  intnetDryrunSpec.json
creditcoin-js/: package.json
getting-started/: building.html  observing-your-chain.html  running-a-node.html  substrate-resources.html
integration-tests/: package.json
node/: Cargo.toml
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  service.rs
pallets/creditcoin/: Cargo.toml
pallets/creditcoin/src/: lib.rs  mock.rs  ocw.rs  tests.rs  types.rs
pallets/creditcoin/src/migrations/: v2.rs
pallets/difficulty/: Cargo.toml
pallets/difficulty/src/: lib.rs
pallets/offchain-task-scheduler/: Cargo.toml
pallets/rewards/: Cargo.toml
pallets/rewards/src/: mock.rs
pallets/staking/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  version.rs
scripts/cc-cli/: package.json
scripts/cc-cli/src/: index.ts
scripts/cc-cli/src/commands/: chill.ts  faucet.ts  setKeys.ts  unbond.ts  withdrawUnbonded.ts  wizard.ts
scripts/cc-cli/src/utils/: validate.ts
scripts/js/: package.json
sha3pow/: Cargo.toml
