[package]
name = 'creditcoin-node'
version = '2.0.0-beta.5'
description = 'A Creditcoin node built on substrate.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
homepage = 'https://creditcoin.org'
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate/'
build = 'build.rs'

[[bin]]
name = 'creditcoin-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.creditcoin-node-runtime]
path = '../runtime'


[dependencies]
jsonrpc-core = '18.0.0'
sha3pow = { path = '../sha3pow' }
num_cpus = "1.13.0"
futures-lite = "1.12.0"
log = "0.4.16"
codec = { package = "parity-scale-codec", version = "3.1.0" }
tiny-bip39 = "0.8.2"
hex = "0.4.3"
creditcoin-node-rpc = { path = "./rpc" }
clap = { version = "3.0", features = ["derive"] }

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-consensus-pow]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-offchain]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sc-transaction-pool-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-consensus-pow]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[features]
default = ['std']
runtime-benchmarks = ['creditcoin-node-runtime/runtime-benchmarks']
std = ['sp-consensus-pow/std']
