[package]
name = 'creditcoin-node'
version = '2.0.0-beta.6'
description = 'A Creditcoin node built on substrate.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
homepage = 'https://creditcoin.org'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate/'
build = 'build.rs'

[[bin]]
name = 'creditcoin-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = "https://github.com/paritytech/substrate.git"
version = '3.0.0'
branch = "polkadot-v0.9.19"

[dependencies.creditcoin-node-runtime]
path = '../runtime'
version = '2.0.0-beta.6'

[dependencies]
jsonrpc-core = "18.0.0"
structopt = "0.3.26"
sha3pow = { path = '../sha3pow' }
num_cpus = "1.13.1"
futures-lite = "1.12.0"
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.1.2" }
tiny-bip39 = "0.8.2"
hex = "0.4.3"
creditcoin-node-rpc = { version = "2.0.0-beta.6", path = "./rpc" }
primitives = { path = "../primitives" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }


[dependencies.frame-benchmarking]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.frame-benchmarking-cli]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.pallet-transaction-payment-rpc]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-basic-authorship]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-cli]
features = ['wasmtime']
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-client-api]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-consensus]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-consensus-pow]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-executor]
features = ['wasmtime']
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-keystore]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-keystore]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-offchain]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-rpc]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-rpc-api]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-service]
features = ['wasmtime']
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-telemetry]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-transaction-pool]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-transaction-pool-api]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-api]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-block-builder]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-blockchain]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-consensus]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-consensus-pow]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.19"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.19"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.19"

[dependencies.sp-timestamp]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.19"

[dependencies.substrate-frame-rpc-system]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.19"

[features]
default = ['std']
runtime-benchmarks = ['creditcoin-node-runtime/runtime-benchmarks']
std = ['sp-consensus-pow/std']
