[package]
name = "primitives"
version = "2.0.0-beta.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sp-core]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'

[features]
default = ["std"]
std = ["sp-core/std", "sp-runtime/std"]
