[package]
name = "primitives"
version = "2.0.0-beta.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.substrate-prometheus-endpoint]
git = "https://github.com/paritytech/substrate.git"

optional = true
branch = "polkadot-v0.9.19"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[features]
default = ["std", "prometheus"]
std = ["sp-core/std"]
prometheus = ["substrate-prometheus-endpoint"]
