[package]
name = 'creditcoin-node-runtime'
version = '2.0.0-beta.5'
description = 'Creditcoin runtime built on substrate.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
smallvec = "1.8.0"

[dependencies.primitives]
path = "../primitives"


[dependencies.pallet-rewards]
default-features = false
path = '../pallets/rewards'


[dependencies.pallet-difficulty]
default-features = false
path = '../pallets/difficulty'


[dependencies.pallet-creditcoin]
default-features = false
path = '../pallets/creditcoin'


[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-consensus-pow]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-creditcoin/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-rewards/runtime-benchmarks',
    'pallet-difficulty/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'scale-info/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-creditcoin/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-rewards/std',
    'pallet-difficulty/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-consensus-pow/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
