[package]
name = 'creditcoin-node-runtime'
version = '2.0.0-beta.5'
description = 'Creditcoin runtime built on substrate.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
smallvec = "1.8.0"

[dependencies.primitives]
default-features = false
path = "../primitives"


[dependencies.pallet-rewards]
default-features = false
path = '../pallets/rewards'


[dependencies.pallet-difficulty]
default-features = false
path = '../pallets/difficulty'


[dependencies.pallet-creditcoin]
default-features = false
path = '../pallets/creditcoin'


[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
optional = true
branch = 'creditcoin'


[dependencies.frame-executive]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.frame-support]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.frame-system]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
optional = true
branch = 'creditcoin'


[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-consensus-pow]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-core]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-session]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-std]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-version]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-creditcoin/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-rewards/runtime-benchmarks',
    'pallet-difficulty/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'scale-info/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-creditcoin/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-rewards/std',
    'pallet-difficulty/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-consensus-pow/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
