[package]
name = "sha3pow"
version = "2.0.0-beta.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = "3.1"
rand = { version = "0.8.4", features = ["small_rng"] }
sha3 = "0.9.1"
scale-info = "2.0.0"
primitives = { path = "../primitives" }

[dependencies.sc-consensus-pow]
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-consensus-pow]
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-application-crypto]
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'


[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '666f39b8a22108f57732215de006518738034ba2'
