[package]
name = "sha3pow"
version = "2.0.0-beta.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = "3.1"
rand = { version = "0.8.4", features = ["small_rng"] }
sha3 = "0.9.1"
scale-info = "2.0.0"
primitives = { path = "../primitives", default-features = false }

[dependencies.sc-consensus-pow]
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sc-keystore]
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sc-client-api]
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-api]
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-consensus-pow]
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-application-crypto]
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.sp-core]
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'
