[package]
name = "sha3pow"
version = "2.0.0-beta.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = "3.1.2"
rand = { version = "0.8.5", features = ["small_rng"] }
sha3 = "0.10.1"
scale-info = "2.1.1"
primitives = { path = "../primitives" }

[dependencies.sc-consensus-pow]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-keystore]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sc-client-api]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-api]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-consensus-pow]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-application-crypto]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"
