[package]
name = "creditcoin-node-rpc"
version = "2.0.0-beta.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.0" }
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
log = "0.4.16"
pallet-creditcoin = { path = "../../pallets/creditcoin" }
pallet-rewards = { path = "../../pallets/rewards" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"


sp-api = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
sp-blockchain = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
sp-core = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
sp-rpc = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
sp-runtime = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
sp-state-machine = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
sc-rpc = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
sc-client-api = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
frame-system = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
frame-support = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
pallet-balances = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
pallet-timestamp = { git = 'https://github.com/nathanwhit/substrate.git', branch = 'creditcoin' }
creditcoin-node-runtime = { path = "../../runtime" }
jsonrpc-pubsub = "18.0.0"
futures = "0.3.21"
