[package]
name = "pallet-creditcoin"
version = "2.0.0-beta.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = 'FRAME pallet template for defining custom runtime logic.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
homepage = 'https://creditcoin.org'
license = 'Unlicense'
publish = false

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = "0.4.16"
extend = "1.1.2"
ethabi = { version = "17.0.0", features = ["rlp"], default-features = false }
ethereum-types = { version = "0.13.1", features = [
    "rlp",
    "serialize",
], default-features = false }
serde = { version = "1.0.136", features = ["derive"], default-features = false }
serde_json = { version = "1.0.78", features = [
    "alloc",
], default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
lexical = { version = "6.1.0", features = [
    "write-integers",
], default-features = false }
sha2 = { version = "0.10.2", default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = 'master'


[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0'

[dev-dependencies]
bstr = { version = "0.2.17", default-features = false }
parking_lot = "0.11.0"

[dev-dependencies.sp-keystore]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dev-dependencies.sp-tracing]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'sp-core/std',
    'serde/std',
    'serde_json/std',
    'hex/std',
]
try-runtime = ['frame-support/try-runtime']
